--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.11",
     "multer": "^1.4.2",
     "mysql2": "^1.6.5",
     "sequelize": "^5.16.0",
