--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@sentry/node": "5.6.2",
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.2",
     "date-fns": "^2.0.0-beta.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.11",
     "multer": "^1.4.2",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.3.0",
+    "nodemailer-express-handlebars": "^3.1.0",
     "sequelize": "^5.16.0",
+    "youch": "^2.0.10",
     "yup": "^0.27.0"
   },
   "devDependencies": {
